Fix #11 - Raise z-index of dropcontent

--- a/src/app/components/organisms/header.scss
+++ b/src/app/components/organisms/header.scss
@@ -44,6 +44,7 @@ header {
       background-color: $color-grey-100;
       min-width: 210px;
       box-shadow: 0px 0px 7px 8px $color-grey-400-fade;
+      z-index: 1000;
 
       &.open {
         display: block;
